# hackergame2021-writeups

./: LICENSE.md  README.md
T-shirt/: README.md
archive/: announcements.md  core.json
behind-the-scenes/: README.md
official/Amnesia/: README.md
official/Co-Program/: README.md
official/Co-Program/src/: README  cabal.project  cologin-format.txt  coprogram.cabal  counittest-format.txt
official/Co-Program/src/common/: Challenge1.hs  Challenge2.hs  Gen.hs  Language.hs  Parser.hs
official/Easy RSA/: README.md  wp.py
official/FLAG 助力大红包/: README.md
official/JUST BE FUN/: README.md  exp  exp.py
official/Make a wish/: README.md
official/Micro World/: README.md
official/fzuu/: README.md
official/minecRaft/: README.md
official/p😭q/: README.md
official/一石二鸟/: README.md
official/加密的 U 盘/: README.md
official/助记词/: README.md
official/卖瓜/: README.md  writeups.md
official/卷王与野生的 GPA/: README.md
official/去吧！追寻自由的电波/: README.md
official/只读文件系统/: README.md  exp.py  shellcode.c  shellcode_execveat.c
official/图之上的信息/: README.md
official/外星人的音游掌机/: README.md
official/密码生成器/: README.md
official/旅行照片/: README.md
official/灯，等灯等灯/: README.md
official/猫咪问答 Pro Max/: README.md
official/签到/: README.md
official/赛博厨房/: README.md  writeups.md
official/超 OI 的 Writeup 模拟器/: README.md
official/进制十六——参上/: README.md
official/透明的文件/: README.md
official/链上预言家/: README.md
official/阵列恢复大师/: README.md
official/马赛克/: README.md
players/4qwerty7/: writeup.md
players/B1ue1nWh1te/: Hackergame2021Writeups.md  README.md
players/Crabtux/: README.md
players/EarthC/: README.md
(+349 files in other folders)
