cabal-version:      2.4
name:               coprogram
version:            0.1.0.0
author:             ksqsf
maintainer:         ksqsf@mail.ustc.edu.cn
tested-with:        ghc==9.0.1

common base
    default-language: Haskell2010
    default-extensions: NumericUnderscores
                      , MultiWayIf
                      , LambdaCase
                      , FlexibleInstances
    ghc-options: -Wall
    build-depends: MonadRandom ^>= 0.5.3
                 , base ^>=4.15.0
                 , containers ^>= 0.6.4.1
                 , megaparsec ^>= 9.2.0
                 , parser-combinators ^>= 1.3.0
                 , random ^>= 1.2.1
                 , simple-smt ^>= 0.9.7
                 , split ^>= 0.2.3
                 , transformers ^>= 0.5.6.2
                 , network ^>= 3.1.2
                 , network-run ^>= 0.2.4
                 , language-sygus ^>= 0.1.1.3
                 , process ^>= 1.6.11
                 , scanf ^>= 0.1.0
                 , io-region ^>= 0.1.1

library
    import: base
    hs-source-dirs: common
    exposed-modules: Language
                     Gen
                     Parser
                     Challenge1
                     Challenge2

common exe
    import: base
    hs-source-dirs: bin
    ghc-options: -threaded
    build-depends: coprogram

executable server
    import: exe
    main-is: Server.hs

executable solver1
    import: exe
    main-is: Solver1.hs

executable solver2
    import: exe
    main-is: Solver2.hs
